--- a/WebContent/create_event.html
+++ b/WebContent/create_event.html
@@ -4,7 +4,7 @@
   <title>Form to create a new resource</title>
  </head>
 <body>
-  <form action="../server/rest/event" method="POST">
+  <form action="../server/rest/event/create" method="POST">
   <label for="name">Name</label>
   <input name="name" />
   <br/>
